nvidia_gpu_stats/vendor/thiserror/tests/ui/missing-display.stderr
error[E0277]: `MyError` doesn't implement `std::fmt::Display`
 --> tests/ui/missing-display.rs:4:10
  |
4 | pub enum MyError {
  |          ^^^^^^^ `MyError` cannot be formatted with the default formatter
  |
  = help: the trait `std::fmt::Display` is not implemented for `MyError`
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
note: required by a bound in `std::error::Error`
 --> $RUST/core/src/error.rs
  |
  | pub trait Error: Debug + Display {
  |                          ^^^^^^^ required by this bound in `Error`
